--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Tangerine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Parisienne&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -28,13 +28,51 @@
 
     <main>
         <div class="imagen-principal">
-            <img src="img//PULSERA.jpeg" alt="">
+            <p class="bienvenidos">Bienvenidos!</p>
+            <img src="img//PULSERA.jpeg" alt="imagen pulsera">
         </div>
         <div class="nosotros">
-            <h1>Nosotros</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab harum ullam quidem, aspernatur eos aperiam architecto odit debitis laboriosam dicta.</p>
+            <h2>Nosotros</h2>
+            <p class="parrafo"> Somos una empresa dedicada a la venta de Accesorios para la belleza femenina</p>
         </div>
     </main>
+    
+    <section> <!-- Seccion Productos-->
+        <h2>Nuestros Productos</h2>
+        <div class="productos">
+            
+            <div>
+                <p class="producto__parrafo">Anillos</p>
+                <img src="img/anillo.jpeg" alt="Imagen Anillo">
+            </div>
+            <div>
+                <p class="producto__parrafo">Collares</p>
+                <img src="img/collaar.jpeg" alt="Imagen Collar">
+            </div>
+            <div>
+                <p class="producto__parrafo">Pulseras</p>
+                <img src="img/pulsera1.png" alt="Imagen Pulsera">
+            </div>
+        </div>
+    </section> <!-- Fin Seccion Productos-->
+
+    <section>
+        <h2>Contáctanos</h2>
+        <div class="contenedor-redes">
+            <div class="redes">
+                <p class="redes__parrafo">Whatsapp</p>
+                <a href="https://api.whatsapp.com/send?phone=3417123272"><img src="img/whatsapp.svg" alt="Imagen whatsapp"></a>
+            </div>
+            <div class="redes">
+                <p class="redes__parrafo">Facebook</p>
+                <a href="https://www.facebook.com/AfiladosEnRosario"><img src="img/facebook.svg" alt="Imagen facebook"></a>
+            </div>
+            <div class="redes">
+                <p class="redes__parrafo">Instagram</p>
+                <a href="https://www.instagram.com/scrunchies_rosario97/"><img src="img/instagram.svg" alt="Imagen instagram"></a>
+            </div>
+        </div>
+    </section>
     <footer>
         <p><strong>All Rights Reserved  &copy;Ailen Gareca 2022</strong> </p>
     </footer> 
