--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="nosotros">
             <h2>Nosotros</h2>
-            <p class="parrafo"> Somos una empresa dedicada a la venta de Accesorios para la belleza femenina</p>
+            <p class="parrafo"> Somos una empresa dedicada a la venta de accesorios para la belleza femenina.Nuestra empresa nacio en 2020 en el marco de una pandemia mundial y crece dia a dia gracias a nuestros clientes que confian en nuestro trabajo.Actualmente nos encontramos en la ciudad de Rosario (Santa Fe)</p>
         </div>
     </main>
     
